--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.10.3",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.3",
